--- a/.github/workflows/main_herewegoagain.yml
+++ b/.github/workflows/main_herewegoagain.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        env:
+          MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }} # Accessing a GitHub Secret as an environment variable during build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -60,4 +62,5 @@ jobs:
           app-name: 'herewegoagain'
           slot-name: 'Production'
           package: '*.jar'
+
           
