--- a/.github/workflows/main_tryingthisagain.yml
+++ b/.github/workflows/main_tryingthisagain.yml
@@ -39,6 +39,7 @@ jobs:
   deploy:
     runs-on: windows-latest
     needs: build
+    environment: HelloAgain
     permissions:
       id-token: write #This is required for requesting the JWT
       contents: read #This is required for actions/checkout
@@ -65,3 +66,4 @@ jobs:
           package: '*.jar'
 
           
+
