--- a/.github/workflows/main_tryingthisagain.yml
+++ b/.github/workflows/main_tryingthisagain.yml
@@ -22,15 +22,21 @@ jobs:
         with:
           java-version: '17'
           distribution: 'microsoft'
+        env:
+          MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
 
       - name: Build with Maven
         run: mvn clean install
+        env:
+          MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
+        env:
+          MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
 
   deploy:
     runs-on: windows-latest
@@ -61,6 +67,7 @@ jobs:
           package: '*.jar'
 
           
+
 
 
 
