--- a/.github/workflows/main_tryingthisagain.yml
+++ b/.github/workflows/main_tryingthisagain.yml
@@ -14,6 +14,9 @@ jobs:
     runs-on: windows-latest
     permissions:
       contents: read #This is required for actions/checkout
+    env:
+        MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
+      
 
     steps:
       - uses: actions/checkout@v4
@@ -67,6 +70,7 @@ jobs:
           package: '*.jar'
 
           
+
 
 
 
