--- a/.github/workflows/main_tryingthisagain.yml
+++ b/.github/workflows/main_tryingthisagain.yml
@@ -16,6 +16,7 @@ jobs:
       contents: read #This is required for actions/checkout
     env:
         MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
+        HEDGEHOG: "howdy"
       
 
     steps:
@@ -26,13 +27,16 @@ jobs:
           java-version: '17'
           distribution: 'microsoft'
           MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
+          HEDGEHOG: "howdy"
         env:
           MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
+          HEDGEHOG: "howdy"
 
       - name: Build with Maven
         run: mvn clean install
         env:
           MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
+          HEDGEHOG: "howdy"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -40,8 +44,10 @@ jobs:
           name: java-app
           path: '${{ github.workspace }}/target/*.jar'
           MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
+          HEDGEHOG: "howdy"
         env:
           MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
+          HEDGEHOG: "howdy"
 
   deploy:
     runs-on: windows-latest
@@ -72,6 +78,7 @@ jobs:
           package: '*.jar'
 
           
+
 
 
 
