--- a/.github/workflows/main_tryingthisagain.yml
+++ b/.github/workflows/main_tryingthisagain.yml
@@ -32,6 +32,13 @@ jobs:
           MY_AWESOME_PAT: ${{ secrets.MY_AWESOME_PAT }}
           HEDGEHOG: "howdy"
 
+      - name: Set Azure app settings
+        run: |
+          az webapp config appsettings set \
+          --resource-group DefaultResourceGroup-EUS2 \
+          --name TringThisAgain \
+          --settings HEDGEHOG=howdy
+
       - name: Build with Maven
         run: mvn clean install
         env:
@@ -78,6 +85,7 @@ jobs:
           package: '*.jar'
 
           
+
 
 
 
