--- a/.github/workflows/main_tryingthisagain.yml
+++ b/.github/workflows/main_tryingthisagain.yml
@@ -35,8 +35,8 @@ jobs:
       - name: Set Azure App Setting
         run: |
           az webapp config appsettings set \
-          --resource-group DefaultResourceGroup-EUS2 \
-          --name TryingThisAgain \
+          --resource-group "DefaultResourceGroup-EUS2" \
+          --name "TryingThisAgain" \
           --settings HEDGEHOG=${{ secrets.MY_AWESOME_PAT }}
 
       - name: Build with Maven
@@ -85,6 +85,7 @@ jobs:
           package: '*.jar'
 
           
+
 
 
 
