--- a/.github/workflows/main_tryingthisagain.yml
+++ b/.github/workflows/main_tryingthisagain.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  HEDGEHOG: "hello"
+  Howdy: "hello"
 
 jobs:
   build:
@@ -65,3 +65,4 @@ jobs:
           package: '*.jar'
 
           
+
