--- a/.github/workflows/main_helpme.yml
+++ b/.github/workflows/main_helpme.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy JAR app to Azure Web App - testHelpMe
+name: Build and deploy JAR app to Azure Web App - helpMe
 
 on:
   push:
@@ -57,7 +57,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'testHelpMe'
+          app-name: 'helpMe'
           slot-name: 'Production'
           package: '*.jar'
           
